[project]
name = "moab-mcp-core"
version = "0.3.0"
description = "Shared auth/role layer for moab portal MCP servers"
requires-python = ">=3.12"
dependencies = [
    "PyJWT==2.13.0",
    "cryptography==49.0.0",
    "starlette==1.3.1",
    "httpx>=0.27,<1.0",
]

[project.optional-dependencies]
test = ["pytest==8.3.4"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/moab_mcp_core"]
